syntax = "proto3";
package pb;
import "vo.proto";

// 进入房间
message CEnterClassicRoom
{
	uint32 code        = 1;//协议号
	string id          = 2;//id为空自由分配
}

message SEnterClassicRoom
{
    uint32    code     = 1;//协议号
    RoomData  roominfo = 2;//房间的详细资料
    repeated RoomUser  userinfo = 3;//已在房间的玩家基础信息
    repeated RoomBets  betsinfo = 4;//下注倍数
    uint32    error    = 5;//错误码
}

// 结算广播接口，游戏结束
message SClassicGameover
{
    uint32       code          = 1;//协议号
    uint32       state         = 2;//房间状态
    uint32       dealer        = 3;//庄家
    repeated ClassicOver  data = 4;//结算
}

// 领取刮牌奖励
message CGetPrize
{
    uint32       code          = 1;//协议号
	uint32       card          = 2;//获奖的牌值
}

// 刮牌奖励,需要推送豆子和钻石的改变
message SGetPrize
{
    uint32       code          = 1;//协议号
	uint32       card          = 2;//获奖的牌值
    uint32       error         = 3;//错误码
}

// 刮奖
message CPrizeCards
{
    uint32       code          = 1 ;//协议号
}

// 刮奖
message SPrizeCards
{
    uint32       code          = 1;//协议号
	repeated PrizeCard    list = 2;//奖励牌值列表
    uint32       error         = 3;//错误码
}
